fix: 私享会记录传日期参数补0；style: 私享会记录和交易记录 弹出按钮统一成方形样式

--- a/HYNewNest/Features(主代码)/MeComponent/View/CNRecordTypeSelectorView.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/View/CNRecordTypeSelectorView.xib
@@ -30,7 +30,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iWw-6O-s1l">
-                    <rect key="frame" x="0.0" y="916" width="414" height="430"/>
+                    <rect key="frame" x="0.0" y="896" width="414" height="430"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aFP-qj-my7">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="84.5"/>
@@ -92,7 +92,7 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="6BO-ZX-pHr">
                                                     <rect key="frame" x="0.0" y="0.0" width="354" height="40"/>
                                                     <subviews>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Cp-NA-xA4" customClass="CNSelectBtn">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Cp-NA-xA4" customClass="HYRechProcButton">
                                                             <rect key="frame" x="0.0" y="0.0" width="108" height="40"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <state key="normal" title="充值"/>
@@ -100,7 +100,7 @@
                                                                 <action selector="typeAction:" destination="-1" eventType="touchUpInside" id="H78-Ng-ybD"/>
                                                             </connections>
                                                         </button>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wtk-tw-fOw" customClass="CNSelectBtn">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wtk-tw-fOw" customClass="HYRechProcButton">
                                                             <rect key="frame" x="123" y="0.0" width="108" height="40"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <state key="normal" title=" 提现"/>
@@ -108,7 +108,7 @@
                                                                 <action selector="typeAction:" destination="-1" eventType="touchUpInside" id="wHy-hz-zgr"/>
                                                             </connections>
                                                         </button>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="psL-Nu-rkq" customClass="CNSelectBtn">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="psL-Nu-rkq" customClass="HYRechProcButton">
                                                             <rect key="frame" x="246" y="0.0" width="108" height="40"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <state key="normal" title="洗码"/>
@@ -124,7 +124,7 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="3dE-mb-wWt">
                                                     <rect key="frame" x="0.0" y="55" width="231" height="40"/>
                                                     <subviews>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S50-Lh-I2T" customClass="CNSelectBtn">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S50-Lh-I2T" customClass="HYRechProcButton">
                                                             <rect key="frame" x="0.0" y="0.0" width="108" height="40"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <state key="normal" title="优惠领取"/>
@@ -132,7 +132,7 @@
                                                                 <action selector="typeAction:" destination="-1" eventType="touchUpInside" id="90i-qN-1pR"/>
                                                             </connections>
                                                         </button>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AL5-OE-z2Z" customClass="CNSelectBtn">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AL5-OE-z2Z" customClass="HYRechProcButton">
                                                             <rect key="frame" x="123" y="0.0" width="108" height="40"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <state key="normal" title="投注记录"/>
@@ -178,7 +178,7 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="FdW-I1-NzN">
                                             <rect key="frame" x="0.0" y="35.5" width="354" height="40"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B2R-7d-hBr" customClass="CNSelectBtn">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B2R-7d-hBr" customClass="HYRechProcButton">
                                                     <rect key="frame" x="0.0" y="0.0" width="108" height="40"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <state key="normal" title="近3天"/>
@@ -186,7 +186,7 @@
                                                         <action selector="dayAction:" destination="-1" eventType="touchUpInside" id="dcj-m4-YMH"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b2R-Z8-JYB" customClass="CNSelectBtn">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b2R-Z8-JYB" customClass="HYRechProcButton">
                                                     <rect key="frame" x="123" y="0.0" width="108" height="40"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <state key="normal" title="近7天"/>
@@ -194,7 +194,7 @@
                                                         <action selector="dayAction:" destination="-1" eventType="touchUpInside" id="t2l-UZ-El2"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2iv-c9-Flu" customClass="CNSelectBtn">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2iv-c9-Flu" customClass="HYRechProcButton">
                                                     <rect key="frame" x="246" y="0.0" width="108" height="40"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <state key="normal" title="近30天"/>
@@ -265,7 +265,7 @@
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="iWw-6O-s1l" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5gY-od-R9a"/>
-                <constraint firstAttribute="bottom" secondItem="iWw-6O-s1l" secondAttribute="bottom" constant="-450" id="Vdi-Wj-HmU"/>
+                <constraint firstAttribute="bottom" secondItem="iWw-6O-s1l" secondAttribute="bottom" constant="-430" id="Vdi-Wj-HmU"/>
                 <constraint firstAttribute="trailing" secondItem="iWw-6O-s1l" secondAttribute="trailing" id="enh-fW-aor"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="0bx-rG-ZxG"/>
